--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-dms-api",
+  "name": "erp-support-api",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -42,6 +42,7 @@
     "@types/socket.io": "^3.0.2",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
+    "erp-support-api": "file:",
     "image-to-base64": "^2.2.0",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
